another z-index fix attempt

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 16px;
 }
 
+#app {
+  z-index: 20;
+}
+
 nav {
   width: 100%;
   height: 80px;
@@ -172,7 +176,6 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 20;
 }
 .hero h1 {
   font-family: LemonMilkLight;
